Fixing alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -33,14 +33,6 @@ body {
 	line-height: 1;
 }
 
-body {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	margin: 0;
-	min-height: 100vh;
-}
-
 ol, ul {
 	list-style: none;
 }
@@ -2721,8 +2713,7 @@ input, select, textarea {
 /* Main */
 
 	#main {
-		margin-left: auto;
-    	margin-right: auto;
+		margin-left: 35%;
 		max-width: 54em;
 		padding: 8em 4em 4em 4em;
 		width: calc(100% - 35%);
@@ -3419,18 +3410,11 @@ input, select, textarea {
     border-radius: 10px;
 }
 
-/*h2 {*/
-/*    text-align: center;*/
-/*    margin-bottom: 20px;*/
-/*    color: #2c3e50;*/
-/*}*/
-
 .skill-category {
     margin-bottom: 40px;
 }
 
 .skill-category h3 {
-
 	border-bottom: 2px solid #316ff6;
     padding-bottom: 10px;
     margin-left: 20px;
